--- a/BA.AllureSkinSolution/BA.AllureSkinSolution/appsettings.json
+++ b/BA.AllureSkinSolution/BA.AllureSkinSolution/appsettings.json
@@ -2,10 +2,10 @@
   "EmailConfiguration": {
     "SmtpServer": "smtp.office365.com",
     "SmtpPort": 587,
-    "SmtpUsername": "contact-us@shawnwbailey.com",
-    "SmtpPassword": "#MtChurch!",
+    "SmtpUsername": "contact-us@test.com",
+    "SmtpPassword": "pwd",
     "ToName": "Tonia Nicholson",
-    "DefaultToAddress": "tonia@allureskinsolution.com"
+    "DefaultToAddress": "test@test.com"
   },
   "EmailTemplates": {
     "ContactUs": {
@@ -18,8 +18,8 @@
     }
   },
   "RecaptchaSettings": {
-    "SecretKey": "6LcTx94UAAAAAPLb-qhlSUggmW8OKzxjXlsdkpty",
-    "SiteKey": "6LcTx94UAAAAAN7xuA2LHmWpgjB3xJ3QIzVIhpXM",
+    "SecretKey": "SecretKey",
+    "SiteKey": "SecretKey",
     "Version": "v2"
   },
   "Logging": {
